# umasupporter-friend-server

./: .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml  schema.graphql
app/: __init__.py  cookie.py  database.py  dictionary.py  env.py  models.py  schema.py
